# tabular_augmentation

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
src/tabular_augmentation/: __init__.py  custom_smote.py  cvae.py  example.ipynb  mixup.py  sdv_synthesizer.py  smote.py  utils.py
src/tabular_augmentation/tab_ddpm/: __init__.py  gaussian_multinomial_diffsuion.py  synthesis.py  utils.py
src/tabular_augmentation/tab_ddpm/lib/: data.py  util.py
src/tabular_augmentation/tab_ddpm/scripts/: pipeline.py  sample.py  train.py  tune_ddpm.py  utils_train.py
